--- a/index.css
+++ b/index.css
@@ -131,5 +131,10 @@ param{
     background-position: center;
     background-size: cover;
 }
+iframe{
+    width: 100%;
+    height: 100px;
+
+}
 
 
